--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14",
+    "vue": "^2.7.10",
     "vue-router": "^3.5.1",
+    "vue-sidebar-menu": "^4.8.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
