--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.7.10",
     "vue-router": "^3.5.1",
     "vue-sidebar-menu": "^4.8.1",
+    "vue2-google-maps": "^0.10.7",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
