--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "bootstrap-vue": "^2.22.0",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "vue": "^2.7.10",
+    "vue-chartjs": "^4.1.1",
     "vue-router": "^3.5.1",
     "vue-sidebar-menu": "^4.8.1",
     "vue2-google-maps": "^0.10.7",
