--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "start": "vue-cli-service serve",
-    "prueba": "vue-cli-service build"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
